theway/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: theway-ingress
spec:
  rules:
    - host: theway.d4g.tinker.ovh
      http:
        paths:
          - backend:
              service:
                name: theway-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - theway.d4g.tinker.ovh
      secretName: theway-d4g
